# gh-issues-local

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.amplifier/skills/initialize-for-dev/: SKILL.md
.amplifier/skills/pre-push-checklist/: SKILL.md
.amplifier/skills/update-dependencies/: SKILL.md
.github/workflows/: build-frontend.yaml
docs/: ISSUES_SPEC.md
scripts/: smoke_test.py
src/gh_issues_local/: __init__.py  app.py  auth.py  config.py  frontend.py  models.py  storage.py
src/gh_issues_local/routes/: comments.py  issues.py
src/gh_issues_local/static/: index.html
src/gh_issues_mock/: __init__.py  app.py  auth.py
src/gh_issues_mock/static/: index.html
tests/: test_app.py  test_config.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  types.ts
web/src/components/: AppLayout.tsx  EmptyState.tsx  ErrorMessage.tsx  InlineEdit.tsx  IssueRow.tsx  IssueStateBadge.tsx  IssueStateIcon.tsx  LabelBadge.tsx  LoadingSpinner.tsx  Pagination.tsx  RelativeTime.tsx  StateActions.tsx
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useAuth.ts  useComments.ts  useIssue.ts  useIssues.ts  useRepos.ts  useSearch.ts
web/src/lib/: color.ts  time.ts
web/src/pages/: Home.tsx  IssueDetail.tsx  IssueList.tsx  LoginPage.tsx  NewIssue.tsx  NotFound.tsx  RepoSelector.tsx  SearchResults.tsx
